--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -194,26 +194,39 @@
 <br>
 <br>
 
-    <div class="responsive-two-columns" >
-      <div>
 
-        <br>
-        <br>
-        <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
-        <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
-        <p> in Berlin erheblich variieren. Darüber hinaus muss
-          </p>
-        <p>
-          auch der Größe und der Art der zu entsorgenden Möblierung
-        </p>
-        </div>
-      <div>
-        <br>
-        <br>
-        <google-map [width]="900" [height]="300" [options]="mapOptions"></google-map>
-      </div>
-      </div>
     </div>
+  <div class="naturalborder1">
+  <div class="responsive-two-columns" >
+        <div style="text-align:center">
+
+          <br>
+          <br>
+          <h4>BABAS DIENSTLEISTUNGEN</h4>
+          <h2>Entrümpelung Berlin – faire und transparente Preise</h2>
+          <p> in Berlin erheblich variieren. Darüber hinaus muss
+            </p>
+          <p>
+            auch der Größe und der Art der zu entsorgenden Möblierung
+          </p>
+          </div>
+        <div style="text-align:center">
+          <br>
+          <br>
+          <h4>BABAS DIENSTLEISTUNGEN</h4>
+          <h2>Entrümpelung Berlin – faire und transparente Preise</h2>
+          <p> in Berlin erheblich variieren. Darüber hinaus muss
+          </p>
+          <p>
+            auch der Größe und der Art der zu entsorgenden Möblierung
+          </p>
+<!--          <img src="assets/images/bitkili.png" class="w3-round" max-width="750" height="200">-->
+        </div>
+        </div>
+  </div>
+  <br>
+  <br>
+
   <div class="responsive-three-columns">
     <div class="item">
       <div class="zoom">
@@ -236,15 +249,27 @@
       </div>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <div class="naturalborder1" style="text-align:center">
+    <h2 > Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+    <p>
+      Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
+    </p>
+    <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+    </p>
+  </div>
 
-
+  <!--<div class="naturalborder">
+    <google-map width="1293" height="400"[options]="mapOptions"></google-map>
+  </div>-->
 <!--  <div class="shadow">-->
 <!--    <img class="logo" src="assets/images/woman.png" width="600" height="400">-->
 <!--  </div>-->
-<br>
-<br>
-<br>
-<br>
+
     <!--<div class="center-div" >
       <div class="bodytext3" style="text-align:center">
         <div class="hockerimg">
@@ -262,9 +287,7 @@
     <br>
     <br>
 <!--    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>-->
-    <br>
-    <br>
-    <br>
+
 <!--    <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>-->
     <!--<div class="three-columns-grid">
       <div class="zoom">
@@ -388,12 +411,22 @@
     <!--<div class="body11">
       <div class="alignleft8">-->
 
-
+  <div  style="text-align:center">
+    <h2 > Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+    <p>
+      Rupesh based in world famous Harley Street London, believes that the most exceptional lips appear to have had nothing injected at all. They are simply balanced, full and natural looking lips. Through employing the non-surgical lip filler techniques that Rupesh has perfected, he knows you will be leaving the London Lip Clinic with nothing but a smile – and some compliments.
+    </p>
+    <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+    </p>
+  </div>
 <!--        <div class="row">-->
           <br>
           <br>
           <br>
           <!--<div class="alignleft7">-->
+
             <div class="column">
               <div class="container2">
                 <!--        <div class="alignright6">-->
@@ -425,6 +458,7 @@
             </div>
           <!--</div>-->
 <!--        </div>-->
+
   <div class="naturalborder1" style="bacground-color:#FDF4E3">
     <div class="row">
       <div class="column1">
@@ -464,7 +498,11 @@
           9:00am - 6:00pm
       </div>
     </div>
+    <div class="naturalborder">
+      <google-map width="1293" height="400"[options]="mapOptions"></google-map>
+    </div>
   </div>
+
        <!-- <div class="row">
           <div class="column1">
             <h5>
