--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -421,6 +421,73 @@
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
     </p>
   </div>
+
+  <div class="client-count-wrp mt-100 ">
+    <div class="responsive-three-columns">
+      <div class="item">
+        <img src="assets/icons/task.png" class="w3-round">
+        <div class="cards">
+          <br>
+          <h4>{{projectcount}}</h4>
+          <p>Project Completed</p>
+        </div>
+      </div>
+      <div class="item">
+          <img src="assets/icons/customer-service.png" class="w3-round">
+        <div class="cards">
+          <br>
+          <h4>{{customerfeedback + "%"}}</h4>
+          <p>Customer Satisfaction</p>
+        </div>
+      </div>
+      <div class="item">
+        <img class= deneme1 src="assets/icons/handshake1.png" class="w3-round">
+        <div class="cards">
+          <br>
+          <h4>{{accuratecount + "%"}}</h4>
+          <!--concat % sign-->
+          <p>Accuracy</p>
+        </div>
+      </div>
+      <div class="item">
+        <img class= deneme1 src="assets/icons/group.png" class="w3-round">
+        <div class="cards">
+          <br>
+          <h4>{{clientcount}}</h4>
+          <p>Clients</p>
+        </div>
+      </div>
+    </div>
+   <!-- <div class="container">
+      <div class="heading">
+        <h4>Our Numbers</h4>
+      </div>
+      <div class="client-count-wrp-inner">
+        <div class="cards">
+          <h4>{{projectcount}}</h4>
+          <p>Project Completed</p>
+        </div>
+        &lt;!&ndash;card&ndash;&gt;
+        <div class="cards">
+          <h4>{{accuratecount + "%"}}</h4>
+          &lt;!&ndash;concat % sign&ndash;&gt;
+          <p>Accuracy</p>
+        </div>
+        &lt;!&ndash;card&ndash;&gt;
+        <div class="cards">
+          <h4>{{clientcount}}</h4>
+          <p>Clients</p>
+        </div>
+        &lt;!&ndash;card&ndash;&gt;
+        <div class="cards">
+          <h4>{{customerfeedback + "%"}}</h4>
+          <p>Customer Satisfaction</p>
+        </div>
+        &lt;!&ndash;card&ndash;&gt;
+      </div>
+    </div>-->
+
+  </div>
 <!--        <div class="row">-->
           <br>
           <br>
