--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -49,7 +49,8 @@
   <br>
   <br>
   <br>
-  <div class="responsive-two-columns" >
+
+  <div class="responsive-two-columns" data-aos="fade-down" >
     <div>
       <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
       <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
@@ -100,6 +101,8 @@
         <img src="assets/images/happy.png" width="600" height="600">
     </div>
     </div>
+
+
   <div class="client-count-wrp mt-100 ">
     <div class="responsive-three-columns">
       <div class="item">
@@ -141,7 +144,7 @@
   <br>
   <br>
   <br>
-  <div class="center-div" style="text-align:center">
+  <div class="center-div" style="text-align:center" data-aos="fade-left">
     <h2 class="colour1">BIGGER ISN’T ALWAYS BETTER.</h2>
     <img src="assets/images/woman.png" width="600" height="400">
     <br>
