--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -796,3 +796,24 @@ background: dodgerblue;
     }
     /****/
 }
+
+.div2{
+   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  height: 300px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to right, #1cd8d2, #93edc7);
+  color: white;
+  margin: 100px 0;
+  border-radius: 7px;
+}
+
+.container1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+}
