--- a/src/app/referenzen/referenzen.component.html
+++ b/src/app/referenzen/referenzen.component.html
@@ -5,32 +5,37 @@
 <!--  <link rel="stylesheet" href="aos-by-red.css">-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+<br>
+<br>
+<br>
+<br>
+<br>
 <body>
 <div class="container">
   <!------------------------------------------------------------>
   <div class="div">
-    I am div 1
+    <img src="assets/images/happy.png" width="600" height="400">
   </div>
   <!--------------------------------------------------------------->
   <div class="div" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
-    I am div 2
+    <img src="assets/images/kirmizili.png" width="600" height="400"  >
   </div>
   <!-------------------------------------------------------------->
   <div class="div" data-aos="fade-right">
-    I am div 3
+    <img src="assets/images/boyali.png" width="600" height="400">
   </div>
   <!-- ------------------------------------------------------------->
   <div class="div"  data-aos="fade-up">
-    I am div 4
+    <img src="assets/images/bitkili.png" width="600" height="400" >
   </div>
   <!-- ------------------------------------------------------------->
-  <div class="div"  data-aos="zoom-in">
-    I am div 5
-  </div>
-  <!-- ------------------------------------------------------------->
-  <div class="div" data-aos="flip-up">
-    I am div 6
-  </div>
+<!--  <div class="div"  data-aos="zoom-in">-->
+<!--    I am div 5-->
+<!--  </div>-->
+<!--  &lt;!&ndash; -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+<!--  <div class="div" data-aos="flip-up">-->
+<!--    I am div 6-->
+<!--  </div>-->
   <!-- ------------------------------------------------------------->
 </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
