--- a/src/app/leistungen/leistungen.component.html
+++ b/src/app/leistungen/leistungen.component.html
@@ -1,37 +1,218 @@
- <div class="body5">
-        <div class="alignleft3">
-          <div class="bodytext2">
-            <h4 class="colour1">BABAS DIENSTLEISTUNGEN</h4>
-            <h2 class="colour1">Entrümpelung Berlin – faire und transparente Preise</h2>
-            <p>Abhängig von der Größe der Wohnung oder des Hauses können die Kosten der Entrümpelung in Berlin erheblich variieren. Darüber hinaus muss auch der Größe und der Art der zu entsorgenden Möblierung Beachtung geschenkt werden, denn ein wichtiger Teil der Entrümpelung ist auch die Entsorgung der nicht mehr benötigten Gegenstände. Um Sie richtig über die Kosten zu informieren, erstellen wir Ihnen erst nach einer Vor-Ort Besichtigung die Rechnung. So können Sie sich sicher sein, dass unsere Preise für die Entrümpelung in Berlin stets transparent und somit nachvollziehbar sind. Noch Fragen? Gerne klären Sie unsere Fachberater über die Entrümpelung in Berlin auf und beraten Sie nach der Klärung aller offenen Fragen zu allen Entsorgungsfragen.</p>
-          </div>
-        </div>
-        <div class="alignright3">
-          <div class="my-google-map">
-            <google-map [width]="null" [height]="null" [options]="mapOptions"></google-map>
-          </div>
-        </div>
-      </div>
-      <div class="body6">
-        <div class="alignleft4">
-          <div class="bodytext3">
-            <h4>BABAS DIENSTLEISTUNGEN</h4>
-            <h2>Jetzt Kontakt aufnehmen!</h2>
-            <p>Service wird bei uns Großgeschrieben! Alle Anfragen werden binnen 24H von uns beantwortet. </p>
-            <a routerLink="/ueberuns-component"  routerLinkActive="active" ariaCurrentWhenActive="page"><button class="button button5" >MEHR ERFAHREN</button></a>
-          </div>
-        </div>
-      </div>
 
 <br>
 <br>
 <br>
-<div class="centerbody">
-  <img src="assets/images/tarak.png"  >
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!--<div class="shadow">
   <br>
   <br>
-  <h2> STUTTGART </h2>
   <br>
-  <h3> GERMANY </h3>
   <br>
+  <br>
+  <br>
+  <img class="logo" src="assets/images/pure.jpeg">
+</div>-->
+
+<div class="backgroundimg">
+<!--  <img class="ripic" src="assets/images/pure.jpeg"  >-->
+  <div class="naturalborder"  data-aos="flip-up"
+       data-aos-easing="linear"
+       data-aos-duration="1500">
+    <h2> Rupesh doesn’t believe you need excessive product to add incredible volume to your lips. Placement is key.</h2>
+    <p>
+      Rupesh based in world famous Harley Street London,
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3> WHO DESIRES A FULLER, POUTIER LIP SHAPE.</h3>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+    </p>
+  </div>
+
+</div>
+<!--<div class="backgroundcolor">-->
+<!--  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}"  >-->
+
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+  font-size: 17px;
+}
+
+#myVideo {
+  position: absoulute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  background-size: cover;
+}
+
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+</style>
+<body>
+<!--<div class="video-container">
+  <video autoplay muted loop id="myVideo" >
+    <source src="assets/videos/Good1.mp4" type="video/mp4" />
+    <h2>Your caption here</h2>
+  </video>
+  <div class="caption">
+
+  </div>
+</div>-->
+<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+  <source src="assets/videos/Good1.mp4" type="video/mp4">
+</video>
+
+<h1>THIS IS A RIVER.</h1>
+<h2>How majestic.</h2>
+
+<!--<video autoplay muted loop id="myVideo" >
+    <source src="assets/videos/Good1.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>-->
+
+<!--<div class="content">
+  <h1>Heading</h1>
+  <p>Lorem ipsum dolor sit amet, an his etiam torquatos. Tollit soleat phaedrum te duo, eum cu recteque expetendis neglegentur. Cu mentitum maiestatis persequeris pro, pri ponderum tractatos ei. Id qui nemore latine molestiae, ad mutat oblique delicatissimi pro.</p>
+  <button id="myBtn" onclick="myFunction()">Pause</button>
+</div>-->
+
+<script>
+var video = document.getElementById("myVideo");
+var btn = document.getElementById("myBtn");
+
+function myFunction() {
+  if (video.paused) {
+    video.play();
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+  }
+}
+</script>
+
+</body>
+<!--  </div>-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<div class="responsive-two-columns naturalborder5" >
+  <div data-aos="flip-right"
+       data-aos-easing="linear"
+       data-aos-duration="1000">
+    <h2 class="colour1">THE HOMEE OF PERFECT LIPS.</h2>
+    <h3 class="colour1">Entrümpelungen in Berlin und Brandenburg</h3>
+    <div >
+      <p>
+        Whether you are looking to add volume to thin lips, even out asymmetrical lips, plump
+      </p>
+      <p>
+        perfection or simply to enhance and define your cupid’s bow, then the London Lip Clinic
+      </p>
+      <p>
+        Street is the place to be seen (or not, should you prefer to opt for our ultra discrete
+      </p>
+      <p>
+        VIP service).
+      </p>
+      <p>  With a wealth of understanding and experience, Rupesh Shah has an
+      </p>
+      <p>
+        impossibly beautiful lips using only non-surgical techniques. His artistry and
+      </p>
+      <p>
+        to detail combined with use of the very best lip filler products makes
+      </p>
+      <p>
+        mouths!
+      </p>
+      <p>  Transparenz ist für die BABAS Dienstleistungen oberstes Gebot.
+      </p>
+      <p>
+        Wohnungsauflösung in Berlin unkomplizierte und schnelle Lösungen.
+      </p>
+      <p>
+        uns als seriösem Dienstleister für die Wohnungsauflösung eine
+      </p>
+      <p>
+        Preiskalkulation. So wissen Sie, was finanziell auf Sie zukommt.
+      </p>
+      <p>
+        Positionen fair und basierend auf unseren Erfahrungswerten.
+      </p>
+      <p>
+        auf die Quadratmeter der aufzulösenden Wohnung in Berlin an.
+      </p>
+
+    </div>
+
+  </div>
+  <div>
+    <img src="assets/images/kirmizili.png" width="600" height="400"  data-aos="flip-left"
+         data-aos-easing="linear"
+         data-aos-duration="1500">
+  </div>
 </div>
