--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -28,7 +28,7 @@
   <img class="logo" src="assets/images/pure.jpeg">
 </div>-->
 
-  <img class="ri" src="assets/images/pure.jpeg"  >
+  <img class="ripic" src="assets/images/pure.jpeg"  >
 <!--<div class="backgroundcolor">-->
 <!--  <div style="background-size: 1200px 600px;" [ngStyle]="{backgroundImage:'url(./assets/images/pure.jpeg)'}"  >-->
 
